generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Role {
  benfek
  principal
  pharmacy
  researcher
  wholesaler
}

model User {
  id            Int            @id @default(autoincrement())
  email         String         @unique
  password      String
  firstName     String
  lastName      String
  phone         String?
  role          Role           @default(benfek)
  refreshTokens RefreshToken[]
  userId        String?        @unique
  podcasts      Podcast[]
  supplements   Supplement[]
  carts         Cart[]
  orders        Order[]
  payments      Payment[]
  inbox         Inbox[]
  wallet        Wallet?
  withdrawals   Withdrawal[]
  nutrient      NutrientType?  // One-to-one relation, no fields/references here
  quizCodesCreated QuizCode[]  @relation("QuizCodeCreator") // Quiz codes created by this principal
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
}

model RefreshToken {
  id        Int      @id @default(autoincrement())
  token     String   @unique
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Podcast {
  id          Int      @id @default(autoincrement())
  title       String
  description String
  audioUrl    String
  userId      Int
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Supplement {
  id          Int         @id @default(autoincrement())
  name        String
  description String
  price       Float
  stock       Int
  imageUrl    String?     // Product image URL
  category    String?     // Product category
  userId      Int
  user        User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  cartItems   CartItem[]
  orderItems  OrderItem[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
}

model Cart {
  id        Int        @id @default(autoincrement())
  userId    Int
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     CartItem[]
  createdAt DateTime   @default(now())
  updatedAt DateTime @updatedAt
}

model CartItem {
  id           Int        @id @default(autoincrement())
  quantity     Int
  priceAtAdd   Float?     // Price snapshot when item was added to cart
  cartId       Int
  cart         Cart       @relation(fields: [cartId], references: [id], onDelete: Cascade)
  supplementId Int
  supplement   Supplement @relation(fields: [supplementId], references: [id])
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
}

model Order {
  id              Int         @id @default(autoincrement())
  orderNumber     String      @unique @default(uuid()) // Human-readable order reference
  userId          Int
  user            User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  items           OrderItem[]
  payment         Payment?
  status          String      @default("pending") // pending, paid, processing, shipped, delivered, cancelled
  total           Float       // Total price of the order
  totalQuantity   Int         @default(0) // Total number of items in the order
  shippingAddress String?     @db.Text
  notes           String?     @db.Text
  createdAt       DateTime    @default(now())
  updatedAt       DateTime    @updatedAt
}

model OrderItem {
  id             Int        @id @default(autoincrement())
  quantity       Int
  price          Float      // Price at time of order
  productName    String?    // Snapshot of product name
  orderId        Int
  order          Order      @relation(fields: [orderId], references: [id], onDelete: Cascade)
  supplementId   Int
  supplement     Supplement @relation(fields: [supplementId], references: [id])
  createdAt      DateTime   @default(now())
  updatedAt      DateTime   @updatedAt
}

model Payment {
  id                Int       @id @default(autoincrement())
  userId            Int
  user              User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderId           Int       @unique
  order             Order     @relation(fields: [orderId], references: [id])
  amount            Float
  method            String    // paystack, bank_transfer, cash, etc.
  status            String    @default("pending") // pending, success, failed, refunded
  paystackReference String?   @unique // Paystack transaction reference
  paystackChannel   String?   // card, bank, ussd, qr, mobile_money, etc.
  currency          String    @default("NGN")
  paidAt            DateTime?
  metadata          String?   @db.Text // JSON string for additional payment data
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
}

model Inbox {
  id        Int      @id @default(autoincrement())
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  subject   String
  message   String
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Wallet {
  id            Int          @id @default(autoincrement())
  balance       Float        @default(0)
  userId        Int          @unique
  user          User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  withdrawals   Withdrawal[]
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
}

model Withdrawal {
  id            Int      @id @default(autoincrement())
  amount        Float
  userId        Int
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  walletId      Int
  wallet        Wallet   @relation(fields: [walletId], references: [id], onDelete: Cascade)
  status        String   @default("pending") // pending, completed, failed
  bankName      String
  accountNumber String
  accountName   String
  month         Int      // To track monthly withdrawals
  year          Int      // To track monthly withdrawals
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model NutrientType {
  id            Int         @id @default(autoincrement())
  code          String
  userId        Int         @unique
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  basic         Basic?      @relation
  basicId       Int?        @unique // Field for one-to-one relation with Basic
  lifestyle     Lifestyle?  @relation
  lifestyleId   Int?        @unique // Field for one-to-one relation with Lifestyle
  preference    Preference? @relation
  preferenceId  Int?        @unique // Field for one-to-one relation with Preference
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
}

model Basic {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  gender      String
  nickname    String?
  age         String
  weight      String
  height      String
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

model Lifestyle {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  habit       String
  fun         String
  routine      String
  career      String
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

model Preference {
  id          Int          @id @default(autoincrement())
  nutrientId  Int          @unique // Ensures one-to-one with NutrientType
  nutrient    NutrientType @relation(fields: [nutrientId], references: [id], onDelete: Cascade)
  drugForm    String
  minBudget   Float
  maxBudget   Float
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
}

// Quiz codes for benfek registration - created by Principal when adding a benfek
model QuizCode {
  id                Int       @id @default(autoincrement())
  code              String    @unique
  isUsed            Boolean   @default(false)
  usedBy            Int?      // User ID who used this code (benfek)
  usedAt            DateTime?
  expiresAt         DateTime? // Optional expiration date
  createdBy         Int       // Principal who created this code
  creator           User      @relation("QuizCodeCreator", fields: [createdBy], references: [id])
  
  // Benfek data filled by Principal
  benfekName        String
  benfekPhone       String
  allergies         String?   @db.Text
  scares            String?   @db.Text  // Health issues that scare them
  familyCondition   String?   @db.Text  // Family's notable health condition
  medications       String?   @db.Text  // Current medications
  hasCurrentCondition Boolean @default(false)
  
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
}

